--- a/erp_mes/src/main/resources/static/business/css/shipment.css
+++ b/erp_mes/src/main/resources/static/business/css/shipment.css
@@ -113,7 +113,7 @@ body {
 }
 
 #shipmentAddModal .modal-dialog {
-    max-width: 80%; 모달의 최대 너비를 90%로 설정
+/*      max-width: 65%모달의 최대 너비를 90%로 설정 */
 /*     width: 80%; 모달의 너비를 90%로 설정 */
 /*     height: 70vh; 뷰포트 높이의 90%로 설정 */
 }
