--- a/erp_mes/src/main/resources/templates/pop/work_result.html
+++ b/erp_mes/src/main/resources/templates/pop/work_result.html
@@ -74,7 +74,7 @@
 			<div class="modal-header">
 				<h5 class="modal-title" id="popCodeModalLabel">작업지시 상세정보</h5>
 			</div>
-			<div class="modal-body">
+			<div class="modal-body" style="max-height: 60vh; overflow-y: auto;">
 				<div id="bomInfo" style="width:100%; height:200px; margin-bottom: 3%;">
 					<div id="Workgrid1"></div>
 				</div>
