품질에서 완제품 lot생성으로 변경

--- a/erp_mes/src/main/resources/templates/lot/lot_list.html
+++ b/erp_mes/src/main/resources/templates/lot/lot_list.html
@@ -153,8 +153,9 @@ a[aria-expanded="true"]>.caret::before {
 						<div class="card-body">
 							<div class="container-fluid px-0">
 								<div class="row">
+								<!--
 									<div class="col-6">
-										<div class="mb-3">
+										 <div class="mb-3">
 											<span class="text-secondary font-weight-bold d-block">담당부서</span>
 											<span class="font-weight-normal">영업부</span>
 										</div>
@@ -190,10 +191,10 @@ a[aria-expanded="true"]>.caret::before {
 										<div class="mb-3">
 											<span class="text-secondary font-weight-bold d-block">설비명</span>
 											<span class="font-weight-normal">내부 부착기 1호</span>
-										</div>
+										</div> 
 									</div>
 									<div class="col-6">
-										<div class="mb-3">
+										 <div class="mb-3">
 											<span class="text-secondary font-weight-bold d-block">공정장</span>
 											<span class="font-weight-normal">정재윤</span>
 										</div>
@@ -212,8 +213,8 @@ a[aria-expanded="true"]>.caret::before {
 										<div class="mb-3">
 											<span class="text-secondary font-weight-bold d-block">설비코드</span>
 											<span class="font-weight-normal">EQ060</span>
-										</div>
-									</div>
+										</div> 
+									</div>-->
 								</div>
 							</div>
 						</div>
