--- a/erp_mes/src/main/resources/templates/fragments/header.html
+++ b/erp_mes/src/main/resources/templates/fragments/header.html
@@ -242,7 +242,7 @@
 					<div class="bg-white py-2 collapse-inner rounded">
 						<h6 class="collapse-header">재고 관리:</h6>
 						<a class="collapse-item" th:href="@{/inventory/stock}">재고 현황</a> 
-						<a class="collapse-item" th:href="@{/inventory/warehouse}">창고내 재고 현황</a>
+<!-- 						<a class="collapse-item" th:href="@{/inventory/warehouse}">창고내 재고 현황</a> -->
 						<a class="collapse-item" th:href="@{/inventory/outbound}">출고 관리</a>
 						<a class="collapse-item" th:href="@{/inventory/goods}">입고 관리</a>	
 					</div>
