--- a/erp_mes/src/main/resources/static/bootstrap/css/pop/workResult.css
+++ b/erp_mes/src/main/resources/static/bootstrap/css/pop/workResult.css
@@ -34,7 +34,7 @@
 /*  ======================작업지시 테이블 ================================ */
 #work-orders table {
   	border-collapse: separate;
-  	border-spacing: 0 10px; /* 위아래 8px 간격 */
+  	border-spacing: 0 6px; /* 위아래 8px 간격 */
 }
 
 #work-orders thead th {
@@ -66,6 +66,27 @@
     font-weight: bold;
 }
 
+
+
+#workOrderTable1 tbody {
+	display: block; 
+    max-height: 195px;  /* 원하는 높이 */
+    overflow-y: auto;   /* 스크롤 */
+}
+
+#workOrderTable1 tbody tr {
+    display: table;
+    width: 100%;
+    table-layout: fixed; /* 열 너비 고정 */
+}
+
+#workOrderTable1 thead tr {
+    display: table;
+    width: 98%;
+    table-layout: fixed;
+    border-collapse: separate;
+    border-spacing: 0;
+}
 
 
 /* 작업현황 영역 높이 */
@@ -120,16 +141,14 @@
 
 
 
-
-
 /* 수정 모달 */
 #numPad {
     border-radius: 10px;
     padding: 10px;
     background: #e3e1e1;
-    width: 250px;
-    height: 400px;
-    margin-bottom: 20px; 
+    width: 242px;
+    height: 336px;
+    margin-bottom: 10px; 
 }
 
 .num-btn, #D-deleteBtn, #D-okBtn {
@@ -138,8 +157,8 @@
   	font-size: 20px;
   	cursor: pointer;
   	transition: all 0.2s;
-  	width: 70px;
-  	height: 70px;
+  	width: 60px;
+  	height: 55px;
   	border: none;
 }
 
@@ -173,6 +192,18 @@
 .btn-disabled {
   pointer-events: none;  /* 클릭 막기 */
   opacity: 0.5;          /* 흐릿하게 */
+}
+
+.defectOption {
+	background-color: #ffc107; /* 버튼 배경색 */
+    color: white;              /* 글자색 */
+    border-radius: 8px;        /* 모서리 둥글게 */
+    padding: 5px 12px;         /* 버튼 패딩 */
+    margin: 7px;               /* 버튼 간격 */
+    border: none;              /* 기본 테두리 제거 */
+    cursor: pointer;
+    transition: background-color 0.3s;
+    font-size: 15px;
 }
 
 /* */
