인사등록 페이지 관리자 등급 또는 인사 계정만

--- a/erp_mes/src/main/resources/templates/hrn/personnelRegist.html
+++ b/erp_mes/src/main/resources/templates/hrn/personnelRegist.html
@@ -32,6 +32,7 @@
 						<button class="btn btn-primary btn-sm" id="inputData" onclick="input()">정보입력</button>
 						</div>
 						<form action="/personnel/registPro" method="post" enctype="multipart/form-data" id="registForm" name="registForm" >
+							<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 							<table class="eTable">
 								<tbody>
 									<tr>
