--- a/erp_mes/src/main/resources/templates/fragments/header.html
+++ b/erp_mes/src/main/resources/templates/fragments/header.html
@@ -73,9 +73,12 @@
 					<div class="bg-white py-2 collapse-inner rounded">
 						<h6 class="collapse-header">인사관리 메뉴:</h6>
 						<a class="collapse-item" th:href="@{/personnel/current}">인사현황</a>
-						<a class="collapse-item" th:href="@{/personnel/regist}">인사등록</a> <a
-							class="collapse-item" th:href="@{/personnel/trans}">인사발령</a> <a
-							class="collapse-item" th:href="@{/personnel/orgChart}">조직도</a>
+						<a class="collapse-item" th:href="@{/personnel/regist}"
+							sec:authorize="hasAuthority('ROLE_AUT001') or #authentication.principal.empDeptName == '인사팀'">
+							인사등록
+						</a> 
+						<a class="collapse-item" th:href="@{/personnel/trans}">인사발령</a> 
+						<a class="collapse-item" th:href="@{/personnel/orgChart}">조직도</a>
 					</div>
 				</div></li>
 
