--- a/erp_mes/src/main/resources/templates/hrn/personnelDetailInfo.html
+++ b/erp_mes/src/main/resources/templates/hrn/personnelDetailInfo.html
@@ -6,7 +6,8 @@
     <th:block layout:fragment="style">
         <link rel="stylesheet" th:href="@{/personnel/css/personnel.regist.css}" />
     </th:block>
-    
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+	<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +30,7 @@
 
                 <form th:action="@{/personnel/updatePro}" id="updateForm" name="updateForm" method="post" enctype="multipart/form-data">
                     <input type="hidden" name="empId" th:value="${personnel.empId}">
-
+					<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
                     <table class="eTable">
                         <tbody>
                         	<tr>
