--- a/erp_mes/src/main/resources/templates/fragments/header.html
+++ b/erp_mes/src/main/resources/templates/fragments/header.html
@@ -210,7 +210,7 @@
 					<div class="bg-white py-2 collapse-inner rounded">
 						<h6 class="collapse-header">생산 및 작업 관리:</h6>
 						<a class="collapse-item" th:href="@{/pm/productPlan}">생산 계획</a> <a
-							class="collapse-item" th:href="@{pm/workOrder}">작업지시</a>
+							class="collapse-item" th:href="@{/pm/workOrder}">작업지시</a>
 					</div>
 				</div></li>
 				
