--- a/erp_mes/src/main/resources/templates/pm/product_plan_list.html
+++ b/erp_mes/src/main/resources/templates/pm/product_plan_list.html
@@ -54,7 +54,7 @@
 						<div class="row mb-4">
 		                    <div class="col">
 		                        <label for="product_id" class="form-label">생산계획 번호</label>
-		                        <input type="text" id="plan_id" name="planId" class="form-control" placeholder="ex) PP20250101-001">
+		                        <input type="text" id="plan_id" name="planId" class="form-control" placeholder="ex) PP20250101-001" required="required">
 		                        <input type="hidden" id="order_id" name="orderId" class="form-control">
 		                    </div>
 						</div>
@@ -72,11 +72,11 @@
 						<div class="row mb-4">
 		                    <div class="col">
 		                        <label for="product_id" class="form-label">생산계획 시작일</label>
-		                        <input type="date" id="start_date" name="startDate" class="form-control">
+		                        <input type="date" id="start_date" name="startDate" class="form-control" required="required">
 		                    </div>
 		                    <div class="col">
 		                        <label for="product_name" class="form-label">생산계획 종료일</label>
-		                        <input type="date" id="end_date" name="endDate" class="form-control">
+		                        <input type="date" id="end_date" name="endDate" class="form-control" required="required">
 		                    </div>
 		                    <div class="col">
 		                        <label for="product_name" class="form-label">납기일</label>
