--- a/erp_mes/src/main/resources/templates/hrn/orgChart.html
+++ b/erp_mes/src/main/resources/templates/hrn/orgChart.html
@@ -25,7 +25,8 @@
 						<div class="d-flex" style="gap: 20px;">
 							<!-- 좌측 영역: 부서 목록 -->
 							<div class="dept-list">
-       							<select id="deptSelect" size="4" >
+       							<select id="deptSelect">
+       								<option value="">부서 선택</option>
            							<option th:each="dept : ${departments}"
                    							th:value="${dept.comDtId}"
                    							th:text="${dept.comDtNm}">
