--- a/erp_mes/src/main/resources/templates/main.html
+++ b/erp_mes/src/main/resources/templates/main.html
@@ -46,13 +46,13 @@
 								<input
 									type="text" id="commute_start_time" class="form-control"
 									disabled
-									th:value="${commuteDTOList.size() > 0 && commuteDTOList[0].checkInTime != null ? #temporals.format(commuteDTOList[0].checkInTime, 'HH:mm:ss') : ''}">
+									th:value="${checkInTimeStr}">
 							</div>
 							<div class="d-flex align-items-center mb-3">
 								<label for="commute_end_time" class="mr-2">퇴근시간 :</label> 
 								<input
 									type="text" id="commute_end_time" class="form-control" disabled
-									th:value="${commuteDTOList.size() > 0 && commuteDTOList[0].checkOutTime != null ? #temporals.format(commuteDTOList[0].checkOutTime, 'HH:mm:ss') : ''}">>
+      								th:value="${checkOutTimeStr}">
 							</div>
 							<div class="d-flex align-items-center gap-4">
 								<button id="checkInBtn" class="btn btn-success btn-sm me-3" style="min-width: 80px; margin-right:100px;">출근</button>
