입출고 워크 아이디 연계

--- a/erp_mes/src/main/resources/templates/inventory/outbound_list.html
+++ b/erp_mes/src/main/resources/templates/inventory/outbound_list.html
@@ -33,7 +33,7 @@
 			    <ul class="nav nav-tabs card-header-tabs">
 			        <li class="nav-item">
 			            <a class="nav-link" id="material-out-tab" data-toggle="tab" href="#material-out-content">
-			                자재 긴급 출고 (공장 투입용)
+			                자재 출고 (공장 투입용)
 			            </a>
 			        </li>
 			        <li class="nav-item">
