프론트 수정

--- a/erp_mes/src/main/resources/templates/plant/equipment_list.html
+++ b/erp_mes/src/main/resources/templates/plant/equipment_list.html
@@ -15,7 +15,7 @@
 <body>
 <th:block layout:fragment="content">
     <div class="container-fluid">
-    	<button id="linkBtn" class="btn btn-primary btn-sm" style="float:right;">추가하러가기</button>
+<!--     	<button id="linkBtn" class="btn btn-primary btn-sm" style="float:right;">추가하러가기</button> -->
     	<h1 class="h3 mb-2 text-gray-900">설비 현황</h1>
 <!-- 		모달창 버튼으로 변경 -->
 		<div id="grid"></div>
