--- a/erp_mes/src/main/resources/templates/plant/process_route.html
+++ b/erp_mes/src/main/resources/templates/plant/process_route.html
@@ -16,7 +16,7 @@
 <body>
 <th:block layout:fragment="content">
     <div class="container-fluid">
-    	
+    	<!-- 
 		<div class="d-flex align-items-center gap-2">
   			<label for="orderStatus" class="orderStatus">제품</label>
       		<select id="orderStatus" class="form-select" aria-label="전체" style="margin-left:10px;">
@@ -25,7 +25,7 @@
           		<option value="INPRODUCTION">b엔진</option>
           		<option value="INSHIPMENT">c엔진</option>
       		</select>
-        </div>
+        </div> -->
     	<button id="openModalBtn" class="btn btn-primary btn-sm" style="float:right;">추가</button>
 		<div id="grid" style="width: 100%; height: 300px;"></div>
 	
