--- a/erp_mes/src/main/resources/templates/pm/product_plan_list.html
+++ b/erp_mes/src/main/resources/templates/pm/product_plan_list.html
@@ -61,7 +61,7 @@
 						<div class="row mb-4">
 		                    <div class="col">
 		                      <label for="product_name" class="form-label">제품명</label>
-		                        <input type="text" id="product_name" name="productName" class="form-control" placeholder="ex) 10" readonly="readonly">
+		                        <input type="text" id="product_name" name="productName" class="form-control" placeholder="ex) PRD~" readonly="readonly">
 		                        <input type="hidden" id="product_id" name="productId" class="form-control">
 		                    </div>
 		                    <div class="col">
