--- a/erp_mes/src/main/resources/templates/fragments/header.html
+++ b/erp_mes/src/main/resources/templates/fragments/header.html
@@ -180,7 +180,7 @@
 					<div class="bg-white py-2 collapse-inner rounded">
 						<h6 class="collapse-header">구매 관리:</h6>
 						<a class="collapse-item" th:href="@{/purchase/purchaseOrder}">발주 관리</a> 
-						<a class="collapse-item" th:href="@{/purchase/goods}">입고 관리</a>
+<!-- 						<a class="collapse-item" th:href="@{/purchase/goods}">입고 관리</a> -->
 					</div>
 				</div></li>
 				
