--- a/erp_mes/src/main/resources/templates/pm/product_bom_list.html
+++ b/erp_mes/src/main/resources/templates/pm/product_bom_list.html
@@ -80,6 +80,11 @@
 								          th:text="${c.comDtNm}"></option>
 								</select>
 						    </div>
+						    
+						    <div class="col">
+						        <label for="price" class="form-label">가격</label>
+		                        <input type="number" id="price" name="price" class="form-control" placeholder="가격">
+						    </div>
 						</div>
 		            </div>
 		
