--- a/erp_mes/src/main/resources/templates/pop/work_result.html
+++ b/erp_mes/src/main/resources/templates/pop/work_result.html
@@ -37,7 +37,7 @@
 								<th>작업지시ID</th>
 							    <th>제품명</th>
 							    <th>작업시작일</th>
-							    <th>작업종료일</th>							    
+<!-- 							    <th>작업종료일</th>							     -->
 							    <th>작업상태</th>							    
                 			</tr>
                 		</thead>
